feat: add css styles

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <li>html</li>
             <li>CSS</li>
             <li>Git</li>
+            <li>JavaScript</li>
          </ul>
       </section>
       <section class="section" id="code-example">
